--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 				camera = new THREE.PerspectiveCamera(35, window.innerWidth / window.innerHeight, 1, 500);
 
-				camera.position.y = 43;
-				camera.position.z = 100;
+				camera.position.y = 8;
+				camera.position.z = 80;
 
 				scene.add(camera);
 
@@ -41,9 +41,7 @@
 				document.body.appendChild(renderer.domElement);
 
 				const loader = new THREE.QuillLoader();
-				loader.load("./files/grass_00.quill", function(object) {
-					// console.log(object.children.length);
-					scene.add(object);
+				loader.load("./files/grass_00.quill", function() {
 					render();
 				});
 
